fix del logo y gaps

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h2 {
     }
 }
 .logo {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 
 }
 .logo:hover {
